--- a/new/rclone.conf
+++ b/new/rclone.conf
@@ -1,10 +1,4 @@
-[pc]
-type = pcloud
-hostname = eapi.pcloud.com
-token = {"access_token":"cA1mZDnONSzyJXpmZMz9NykZ1SRPYicrlLJCjhi0AqSaFV3E0lG7","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}
-
-[pcn]
-type = pcloud
-hostname = api.pcloud.com
-token = {"access_token":"o7E17ZDnONSzyJXpmZToyV7kZBKxwhhQGAAm2Sc4vSQDBjyuU9m2X","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}
-
+[dr]
+type = drive
+token = {"access_token":"ya29.a0AeDClZDoh4QJLtVxdSW8QEI-IJki9pnFMPDObB3pKnwpdRJUDWMyPzdpz1yjhxyEc-NPEBIInfnlHtGDfJjBSEAls8jrGoLdn8nVa8LkY_Jiolcy2g4RUZYMFmLGloXXD3I2o3WOdLdKhi6kOFdYN-5xrTrht1DKdVMCQCjEaCgYKAfASARISFQHGX2Mix18QO5r_RxNKGrvuCMpP8Q0175","token_type":"Bearer","refresh_token":"1//01MFcQNyHvX9YCgYIARAAGAESNwF-L9IrgvaYyHvPnZ4CbWTYkpMF6brAdTcT9ddFnOpCSa6NxH3nRhL-PMGY1Fa61outK5iSr4M","expiry":"2024-10-21T13:09:41.1421825+03:30"}
+team_drive = 
